FS-8062: [verto_communicator] Fixing video controls tooltips, now they are visible

--- a/html5/verto/verto_communicator/src/css/verto.css
+++ b/html5/verto/verto_communicator/src/css/verto.css
@@ -52,6 +52,10 @@ button.btn i {
   /*height: 50px;*/
 /*}*/
 
+._720kb-tooltip {
+  z-index:1001;
+}
+
 .navbar .navbar-nav > li.navbar-item-icon > a {
   padding: 18px;
   height: 60px;
